<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_setpass_dialog"
    android:layout_width="250dip"
    android:layout_height="220dip"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txt_experience_dialog_title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="250dip"
        android:layout_height="180dip"
        android:background="#ffc0c0c0"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_location_opration_remind"
            android:textAlignment="textStart"
            android:textColor="#ff000000" />

        <TextView
            android:id="@+id/tv_show_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:singleLine="false"
            android:textAlignment="textStart"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_fact_opration_remind"
            android:textAlignment="textStart"
            android:textColor="#ff000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_experience_cancel"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="@drawable/button_selector"
            android:text="@string/btn_text_return" />
    </LinearLayout>

</LinearLayout>