<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/main_tittle_background"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_main_titile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_title_safe"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/txt_help" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
      
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#D6D7D6"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_lose_pro_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kn_protection_lock_close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_lose_protect_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_protect_state_close"
                    android:textColor="@color/txt_warn"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_lose_protect_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_lose_protect_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_button_selector"
                    android:padding="10dip"
                    android:text="@string/txt_lose_protect_start"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/background" >

        <ListView
           
            android:id="@+id/lv_lose_protect_function"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/background"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/btn_lose_protect_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:text="@string/lose_protect_order"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_lose_protect_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:text="@string/lose_protect_setting"
                android:textSize="22sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>